# RoleLens

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
candidate/: .gitkeep  cv.example.md  profile.example.yaml
config/: sources.yaml
data/: .gitkeep  sample_jobs.json  sample_reviews.json
imports/manual/: .gitkeep
prompts/: manual_import.md  reviewer.md  setup_candidate_profile.md  source_capture.md  source_discovery.md  update_and_review.md
reports/: .gitkeep  demo.html  demo.md
review_queue/: .gitkeep
review_results/: .gitkeep
src/rolelens/: __init__.py  cli.py  filters.py  inbox.py  manual_import.py  models.py  reports.py  review_queue.py  reviews.py  scrapers.py  setup_check.py  storage.py  triage.py  update.py
src/rolelens/templates/: report.html.j2
tests/: test_cli.py  test_demo.py  test_filters.py  test_inbox.py  test_manual_import.py  test_models.py  test_report.py  test_review_queue.py  test_reviews.py  test_scrapers.py  test_setup_check.py  test_storage.py  test_triage.py  test_update.py
