[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rolelens"
version = "0.1.0"
description = "Local-first, agent-assisted job radar for technical roles."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "click>=8.0.0",
  "pydantic>=2.0.0",
  "PyYAML>=6.0.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
rolelens = "rolelens.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/rolelens"]

[tool.pytest.ini_options]
testpaths = ["tests"]
